# aads

./: .gitignore  Makefile  pyproject.toml
examples/dynamic_programming/: simple_example.py  test_simple_example.py
examples/fractals/dragon_curve/: dragon_curve.py  test_dragon_curve.py
examples/fractals/fractal_plant/: fractal_plant.py  test_fractal_plant.py
examples/fractals/sierpinski_tetrahedron/: sierpinski_tetrahedron.py  test_sierpinski_tetrahedron.py
examples/monty_hall_paradox/: monty_hall_paradox.py
examples/prime_numbers/ferma/: test_ferma.py
examples/sequences/: fibonacci.py  harshad_number.py  kaprekar.py  lucas_number.py  vampire_number.py
practice/practice_1.1/: conftest.py  example.py  setup.py  test_binary_search.py  test_dynamic_array.py
practice/practice_1.2/: linked_list.py  main.py  music_track.py  playlist.py  test_linked_list.py  ui.py  ui_main.ui  view.py
practice/practice_1.2/Go/: go.mod
practice/practice_1.2/Go/cmd/: main.go
practice/practice_1.3/: test_search.py
practice/practice_1.3/Go/: go.mod  go.sum  main.go
practice/practice_1.3/Go/cmd/: main.go  root.go  search.go
practice/practice_1.3/Go/internal/: search.go  search_test.go
practice/practice_1.4/: test_my_sort.py
practice/practice_1.4/Go/: go.mod  go.sum  main.go  test.txt
practice/practice_1.4/Go/cmd/: root.go  sort.go
practice/practice_1.4/Go/mysort/: sort.go  sort_test.go
practice/practice_1.5/: test_external_sort.py
practice/practice_2.1/Go/: go.mod  go.sum  main.go
practice/practice_2.1/Go/cmd/: root.go
practice/practice_2.1/Go/internal/: compress.go  quad_tree.go
practice/practice_2.2/: __init__.py  cli.py  exceptions.py  main.py  maze.py  test_maze.py  views.py
practice/practice_2.2/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
(+15 files in other folders)
